<resources>
    <string name="app_name">SYSU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_casauth">Central Authentication Service (CAS)</string>
    <string name="prompt_netID">NetID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_captcha">Captcha</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_view_course_details">ViewCourseDetails</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="section_brief">%s Sect. %s to %s\n%s~%s</string>
    <string name="add_memo">Add Memo</string>
    <string name="captcha_incorrect">Captcha Incorrect.</string>
    <string name="menu_login">CAS Login</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_schedule">My Schedule</string>
    <string name="menu_achievement">My Score</string>
    <string name="menu_lesson">Course Database</string>
    <string name="menu_uems">UEMS</string>
    <string name="menu_actions">Actions</string>
    <string name="menu_curriculum">Curriculum</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_select">Course Select</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="msg_welcome">Hi, %s. Thanks for using SYSU UEMS for Android. We need some information before we can continue.</string>
    <string name="err_sync_school_calendar">Sorry, the application failed to retrieve the school calendar from remote server, you can try another semester to sync, or manually choose the beginning date of this semester (not recommended), and the programme will try calculate it automatically.</string>
    <string name="item_semaster" translatable="false">%s %s</string>
    <string name="spring_semaster">Spring Semaster</string>
    <string name="fall_semaster">Fall Semaster</string>
    <string name="score">Score</string>
    <string name="teacher">Teacher:</string>
    <string name="grade_point">Points:</string>
    <string name="rank">Rank:</string>
    <string name="time_semester" translatable="false">%s %s</string>
    <string name="first_semester">Semester 1</string>
    <string name="second_semester">Semester 2</string>
    <string name="third_semester">Semester 3</string>
    <string name="credits">%s Credit</string>
    <string name="unknown">Unknown</string>
    <string name="gpa">GPA</string>
    <string name="total_lessons">Lessons Passed:</string>
    <string name="total_credit">Total Credits:</string>
    <string name="minutes_later">%d minutes later</string>
    <string name="seconds_later">Seconds later</string>
    <string name="availability">%d / %d (Remaining/Total)</string>
    <string name="continue_with_netid">Continue with %s</string>
    <string name="ok">OK</string>
    <string name="continue_str">Continue</string>
    <string name="confirmation">Confirmation</string>
    <string name="week_dayofweek">Week %d, %s</string>
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="algrithm_not_accurete">You are about to switch the GPA calculating system into the 4.0 system. We don\'t guarantee the accuracy of the result.</string>
    <string name="cancel">Cancel</string>
    <string name="select_hint">Do you really want to select this course?</string>
    <string name="delete_hint">Do you really want to cancel this selection?</string>
    <string name="press_to_exit">Press back again to exit.</string>
    <string name="title">Title</string>
    <string name="notes">Notes (Markdown Supported)</string>
    <string name="add_attr" translatable="false">Add attributes</string>
    <string name="save">Save</string>
    <string name="action_title_add_memo">Add memo to</string>
    <string name="link_course">Link Course</string>
    <string name="cancel_selection">Cancel Image Selection</string>
    <string name="memo_stored">Memo Stored!</string>
    <string name="memo_title_content_empty">Title or content are empty!</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Image</string>
    <string name="week">Week %d</string>
    <string name="courseType">Course\nType</string>
    <string name="course_label">Course Type</string>
    <string name="event_added">Event added to calendar</string>
    <string name="toast_credit">%s, %.1f Credits</string>
    <string name="curriculum">Curriculum</string>
    <string name="requirement">Requirement</string>
    <string name="degree_limit">Degree and Time Limits</string>
    <string name="graduate">Graduate Requirement</string>
    <string name="maj_funda_course">Fundamental Courses</string>
    <string name="maj_core_course">Core Courses</string>
    <string name="maj_featured">Featured Courses</string>
    <string name="title_activity_view_memo">ViewMemo</string>
    <string name="memo_deleted">Memo deleted</string>
    <string name="undo">Undo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="course_list">Course List</string>
    <string name="pref_header_general">General</string>
    <string name="pref_opensource_ack">Open source acknowledgments</string>
    <string name="pref_keep_alive">Enable keep-alive service</string>
    <string name="pref_description_keep_alive">
        Staging function, enable it to keep your CAS auth session alive
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_about">About</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="desc_about">Third-party Education Management System</string>
    <string name="new_version">Software update</string>
    <string name="disclaimer">DISCLAIMER: This software is developed and maintained by third-party developer.
        Using the data provided by the Education Management System of Sun Yat-sen University. We are not responsible for the accuracy of the provided data.</string>
    <string name="download_started">Download started.</string>
    <string name="update_to">Update to %s</string>
    <string name="title_activity_updater">Updater</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="name_opt">Name (Optional)</string>
    <string name="contact_opt">Contact (Optional)</string>
    <string name="fb_req">Content (Required)</string>
    <string name="fb_err">Failed to send the feedback, check your internet connection.</string>
    <string name="fb_success">Thanks for your feedback!</string>
    <string name="fb_empt">Content is empty!</string>
    <string name="title_activity_course_list">CourseListActivity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_course_plan_list">CoursePlanListActivity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="plan_desc">%.1f Credits, %d Schooling Time</string>
    <string name="semester">Semester:</string>
    <string name="sync_now">Sync Now</string>
    <string name="enter_captcha">Enter captcha to continue.</string>
    <string name="selected_course">Selected Course</string>
    <string name="available_course">Available Course</string>
    <string name="one_day">1 Day</string>
    <string name="three_days">3 Days</string>
    <string name="five_days">5 Days</string>
    <string name="overview">Overview</string>
    <string name="course_passed">Course Passed:</string>
    <string name="use_another_gpa">Use Another GPA System</string>
    <string name="passed">PASSED</string>
    <string name="availability_hint">Availability:</string>
    <string name="cancel_course">Cancel selection</string>
    <string name="select_course">Select</string>
    <string name="ongoing_course">Ongoing Course</string>
    <string name="student_abnormal">Student Status Abnormal</string>
    <string name="abnormal_code">Error Code:</string>
    <string name="message_hint">Messages:</string>
    <string name="upcoming_course">Upcoming Course</string>
</resources>