<!--
  ~  Copyrights (C) Haoqing Deng<admin@denghaoqing.com> All rights reserved
  ~  This file is part of the project SYSU_UEMS
  -->

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->


    <header
        android:fragment="com.denghaoqing.sysu.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.denghaoqing.sysu.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />
    <header
        android:fragment="com.denghaoqing.sysu.Fragments.AboutFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_about" />

    <header
        android:fragment="com.denghaoqing.sysu.Fragments.OpensourceAckFragment"
        android:icon="@drawable/ic_code_black_24dp"
        android:title="@string/pref_opensource_ack" />
</preference-headers>
