<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyrights (C) Haoqing Deng<admin@denghaoqing.com> All rights reserved
  ~  This file is part of the project SYSU_UEMS
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.denghaoqing.sysu.FeedbackActivity"
    tools:showIn="@layout/activity_feedback">

    <EditText
        android:id="@+id/editFbName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/name_opt"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editFbContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFbName"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/contact_opt"
        android:inputType="text" />

    <EditText
        android:id="@+id/editFbContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/editFbContact"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:background="@null"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/fb_req"
        android:inputType="textMultiLine" />
</RelativeLayout>
