<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (C) 2013 - 2018, Haoqing Deng <dhq.sunny@gmail.com>
  ~
  ~  This file is part of the SYSU UEMS.
  ~
  ~  SYSU UEMS is free software; you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation; either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  SYSU UEMS is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with SYSU UEMS; see the file COPYING. If not, see
  ~  <http://www.gnu.org/licenses/>.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">


    <RelativeLayout
        android:id="@+id/score_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/courseNameBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/overview"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/courseNameBig"
            android:layout_below="@+id/courseNameBig"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@android:color/holo_green_light"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textGPA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:lineSpacingExtra="0dp"
                    android:lineSpacingMultiplier="0"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="4.5"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/holo_green_dark"
                    android:gravity="center"
                    android:text="@string/gpa"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cardView"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/cardView"
            android:text="@string/total_credit" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView11"
            android:layout_below="@+id/total_credit"
            android:layout_marginTop="4dp"
            android:text="@string/course_passed" />

        <TextView
            android:id="@+id/total_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView11"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/textView11"
            android:text="71.5" />

        <TextView
            android:id="@+id/lesson_passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView12"
            android:layout_alignBottom="@+id/textView12"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/textView12"
            android:text="30" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignStart="@+id/textView12"
            android:layout_below="@+id/textView12"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/btn_layout_switch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/view"
            android:layout_below="@+id/view"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                app:srcCompat="@drawable/ic_swap_black_24dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="9dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/use_another_gpa" />
        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>